Make wallet no longer overlap hero gallery

--- a/app/assets/stylesheets/app/columns.css.scss
+++ b/app/assets/stylesheets/app/columns.css.scss
@@ -40,7 +40,7 @@
     &.feature {
       background:$cyan;
       color:#FFFFFF;
-      margin: -25px 0 20px 0;
+      margin: 0 0 20px 0;
       text-align: center;
       position: relative;
     }
